--- a/estetilab/src/main/resources/templates/CRUD-cadastrarClientes/edit.html
+++ b/estetilab/src/main/resources/templates/CRUD-cadastrarClientes/edit.html
@@ -10,7 +10,7 @@
                     <h3 class="m-3">Lista de Clientes</h3>
                 </div>
                 <div class="col-3">
-                    <form action="/Clientes/edit" class="ml-5">
+                    <form action="/editarcliente" class="ml-5">
                         <input type="submit" value="Editar Cliente" class="m-3 p-2">
                     </form>
                 </div>
@@ -18,58 +18,58 @@
         </div>
 
         <div class="container-fluid">
-            <a href="/Clientes/edit">
+            <a href="/editarcliente">
                 <div class="btn row bg-secondary rounded my-2 mx-2 w-100">
                     <p class="text-white p-2 m-0">Cliente 01</p>
                 </div>
             </a>
-            <a href="/Clientes/edit">
+            <a href="/editarcliente">
                 <div class="btn row bg-secondary rounded my-2 mx-2 w-100">
                     <p class="text-white p-2 m-0">Cliente 02</p>
                 </div>
             </a>
-            <a href="/Clientes/edit">
+            <a href="/editarcliente">
                 <div class="btn row bg-secondary rounded my-2 mx-2 w-100">
                     <p class="text-white p-2 m-0">Cliente 03</p>
                 </div>
             </a>
-            <a href="/Clientes/edit">
+            <a href="/editarcliente">
                 <div class="btn row bg-secondary rounded my-2 mx-2 w-100">
                     <p class="text-white p-2 m-0">Cliente 04</p>
                 </div>
             </a>
-            <a href="/Clientes/edit">
+            <a href="/editarcliente">
                 <div class="btn row bg-secondary rounded my-2 mx-2 w-100">
                     <p class="text-white p-2 m-0">Cliente 05</p>
                 </div>
             </a>
-            <a href="/Clientes/edit">
+            <a href="/editarcliente">
                 <div class="btn row bg-secondary rounded my-2 mx-2 w-100">
                     <p class="text-white p-2 m-0">Cliente 06</p>
                 </div>
             </a>
-            <a href="/Clientes/edit">
+            <a href="/editarcliente">
                 <div class="btn row bg-secondary rounded my-2 mx-2 w-100">
                     <p class="text-white p-2 m-0">Cliente 07</p>
                 </div>
             </a>
-            <a href="/Clientes/edit">
+            <a href="/editarcliente">
                 <div class="btn row bg-secondary rounded my-2 mx-2 w-100">
                     <p class="text-white p-2 m-0">Cliente 08</p>
                 </div>
             </a>
-            <a href="/Clientes/edit">
+            <a href="/editarcliente">
                 <div class="btn row bg-secondary rounded my-2 mx-2 w-100">
                     <p class="text-white p-2 m-0">Cliente 09</p>
                 </div>
             </a>
-            <a href="/Clientes/edit">
+            <a href="/editarcliente">
                 <div class="btn row bg-secondary rounded my-2 mx-2 w-100">
                     <p class="text-white p-2 m-0">Cliente 10</p>
                 </div>
             </a>
         </div>
-        <button type="submit" class="btn btn-rosa">Salvar alteraï¿½ï¿½es</button>
+        <button type="submit" class="btn btn-rosa">Salvar alterações</button>
         <button type="submit" class="btn btn-rosa">Excluir</button>
 
     </main>
