--- a/estetilab/src/main/resources/templates/index.html
+++ b/estetilab/src/main/resources/templates/index.html
@@ -3,18 +3,18 @@
 <body>
 
 	    <main th:fragment="conteudo">
-      
+      <meta charset="utf-8">
          <h2 class="h2central">Produtos Home-care</h2>
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-25 logo imgCentral" src="https://docs.google.com/uc?id=1gkYckS_KTpbA3WETNLTBgOY6li_qlK1R" alt="Produtos para o rosto">
+                    <img class="d-block w-25 logo imgCentral" src="imagens/homecare1.jpg" alt="Produtos para o rosto">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-25 logo imgCentral" src="https://docs.google.com/uc?id=1CFPWoa7gAPCRSDbfp5ffqxXnvRes87wv" alt="Produtos para o corpo">
+                    <img class="d-block w-25 logo imgCentral" src="imagens/homecare2.jpg" alt="Produtos para o corpo">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-25 logo imgCentral" src="https://docs.google.com/uc?id=1GfrYKQIrkJoXDPgAC4fl9UUoTW0FWJMR" alt="Produtos para o cabelo">
+                    <img class="d-block w-25 logo imgCentral" src="imagens/homecare3.jpg" alt="Produtos para o cabelo">
                 </div>
             </div>
         </div>
