--- a/estetilab/src/main/resources/templates/CRUD-procedimentos/read.html
+++ b/estetilab/src/main/resources/templates/CRUD-procedimentos/read.html
@@ -3,6 +3,7 @@
 <body>
 
     <main th:fragment="conteudo">
+    <meta charset="utf-8">
 		<div class="container-fluid">
             <div class="row">
                 <div class="col-9">
