--- a/estetilab/src/main/resources/templates/fragments/modelo.html
+++ b/estetilab/src/main/resources/templates/fragments/modelo.html
@@ -10,13 +10,11 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
 	integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
 	crossorigin="anonymous">
-<!-- CSS hospedado no Google Drive -->
-<link rel="stylesheet" href="https://docs.google.com/uc?id=1X8lhkMy_zkwiSq4boXSx4hvIemOL6FdS">
+<!-- CSS local -->
+<link rel="stylesheet" href="css/estilos.css">
+<!-- Favicon -->
 <link rel="icon" href="https://docs.google.com/uc?id=114kmRIx943doVjZGPtfFlcuGZqx1EQ8j" />
-<!-- imagens hospedadas no drive -->
-<link rel="stylesheet" href="https://drive.google.com/drive/folders/1fWJx6UNzwr3_oPGFOsPZiZmzbwVx4-ha">
 <title>EstetiLab</title>
-
 </head>
 
 <body>
