--- a/estetilab/src/main/resources/templates/fragments/navbar.html
+++ b/estetilab/src/main/resources/templates/fragments/navbar.html
@@ -2,63 +2,70 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <body>
-            <nav th:fragment="navbar">
-            <meta charset="utf-8">
-        <div class="navbar">
-            <div>
-                <h1 class="navH1"navH1>Esteti<span class="letra">L</span>ab</h1>
-            </div>
-            <div>
-                <img class="logo" src="imagens/logoEstetilLab.jpg" alt="logo Estetilab">
-            </div>
-        </div>
-        <div class="navbar navbar-expand-md navbar-dark bg-dark">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto">
-                    <li class="nav-item nav-link">
-                        <a class="nav-link btn rosa btn-lg text-white m-0" href="/">Home</a>
-                    </li>
-                    <li class="nav-item nav-link">
-                        <a class="nav-link btn rosa btn-lg text-white m-0" href="/cadastrarcliente">Cadastro</a>
-                    </li>
-                    <li class="nav-item nav-link">
-                        <a class="nav-link btn rosa btn-lg text-white m-0" href="/editarcliente">Clientes</a>
-                    </li>
-                    <li class="nav-item nav-link">
-                        <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina3">Agendamentos</a>
-                    </li>
-                    <li class="nav-item nav-link">
-                        <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Prontuário</a>
-                    </li>
-                    <li class="nav-item nav-link">
-                        <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Atendimento</a>
-                    </li>
-                    <li class="nav-item nav-link">
-                        <a class="nav-link btn rosa btn-lg text-white m-0" href="/procedimentos">Procedimentos</a>
-                    </li>
-                    <li class="nav-item nav-link">
-                        <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Produtos Home Care</a>
-                    </li>
-                    <li class="navbar-collapse dropdown nav-link navbar-nav mr-auto">
-                        <button class="dropdown-toggle dropdown-item nav-item nav-link btn rosa btn-lg text-white m-0 letra fontSize" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Relatórios
-                        </button>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="#">Clientes</a>
-                            <a class="dropdown-item" href="#">Estoque Home Care</a>
-                            <a class="dropdown-item" href="#">Atendimentos</a>
-                            <a class="dropdown-item" href="#">Procedimentos </a>
-                            <a class="dropdown-item" href="#">Auditoria</a>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    
+	<nav th:fragment="navbar">
+		<meta charset="utf-8">
+		<div class="navbar">
+			<div>
+				<h1 class="navH1" navH1>
+					Esteti<span class="letra">L</span>ab
+				</h1>
+			</div>
+			<div>
+				<img class="logo" src="imagens/logoEstetilLab.jpg"
+					alt="logo Estetilab">
+			</div>
+		</div>
+		<div class="navbar navbar-expand-md navbar-dark bg-dark">
+			<button class="navbar-toggler" type="button" data-toggle="collapse"
+				data-target="#navbarSupportedContent"
+				aria-controls="navbarSupportedContent" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item nav-link"><a
+						class="nav-link btn rosa btn-lg text-white m-0" href="/">Home</a>
+					</li>
+					<li class="nav-item nav-link"><a
+						class="nav-link btn rosa btn-lg text-white m-0"
+						href="/cadastrarcliente">Cadastro</a></li>
+					<li class="nav-item nav-link"><a
+						class="nav-link btn rosa btn-lg text-white m-0"
+						href="/editarcliente">Clientes</a></li>
+					<li class="nav-item nav-link"><a
+						class="nav-link btn rosa btn-lg text-white m-0" href="/pagina3">Agendamentos</a>
+					</li>
+					<li class="nav-item nav-link"><a
+						class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Prontuário</a>
+					</li>
+					<li class="nav-item nav-link"><a
+						class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Atendimento</a>
+					</li>
+					<li class="nav-item nav-link"><a
+						class="nav-link btn rosa btn-lg text-white m-0"
+						href="/procedimentos">Procedimentos</a></li>
+					<li class="nav-item nav-link"><a
+						class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Produtos
+							Home Care</a></li>
+					<li class="navbar-collapse dropdown nav-link navbar-nav mr-auto">
+						<button
+							class="dropdown-toggle dropdown-item nav-item nav-link btn rosa btn-lg text-white m-0 letra fontSize"
+							type="button" id="dropdownMenuButton" data-toggle="dropdown"
+							aria-haspopup="true" aria-expanded="false">Relatórios</button>
+						<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+							<a class="dropdown-item" href="#">Clientes</a> <a
+								class="dropdown-item" href="#">Estoque Home Care</a> <a
+								class="dropdown-item" href="#">Atendimentos</a> <a
+								class="dropdown-item" href="#">Procedimentos </a> <a
+								class="dropdown-item" href="#">Auditoria</a>
+						</div>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+
 </body>
 
 </html>
