Ajustes no controlador para CRUD-procedimentos

--- a/estetilab/src/main/resources/templates/CRUD-procedimentos/read.html
+++ b/estetilab/src/main/resources/templates/CRUD-procedimentos/read.html
@@ -10,7 +10,7 @@
                     <h3 class="m-3">Lista de Procedimentos</h3>
                 </div>
                 <div class="col-3">
-                    <form action = "/procedimentos/edit" class="ml-5">
+                    <form action = "/procededit" class="ml-5">
                         <input type="submit" value="Adicionar Procedimento" class="m-3 p-2">
                     </form>
                 </div>
