--- a/estetilab/src/main/resources/templates/fragments/navbar.html
+++ b/estetilab/src/main/resources/templates/fragments/navbar.html
@@ -44,7 +44,7 @@
 					</li>
 					<li class="nav-item nav-link"><a
 						class="nav-link btn rosa btn-lg text-white m-0"
-						href="/procedimentos">Procedimentos</a></li>
+						href="/procedview">Procedimentos</a></li>
 					<li class="nav-item nav-link"><a
 						class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Produtos
 							Home Care</a></li>
