--- a/estetilab/src/main/resources/templates/fragments/footer.html
+++ b/estetilab/src/main/resources/templates/fragments/footer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns: th="http://www.thymeleaf.org">
-<head>
 <body>
+<meta charset="utf-8">
 	<div th:fragment="rodape">
 		<footer class="footer modal-footer">
 			<div class="footer">
@@ -24,7 +24,7 @@
 				</div>
 				<div class="row container-fluid">
 					<div class="col-12">
-					<p class="text-center">®Todos os direitos reservados</p>
+					<p class="text-center">Â®Todos os direitos reservados</p>
 					</div>
 				</div>
 			</div>
