--- a/estetilab/src/main/resources/templates/fragments/footer.html
+++ b/estetilab/src/main/resources/templates/fragments/footer.html
@@ -2,11 +2,11 @@
 <html xmlns: th="http://www.thymeleaf.org">
 <body>
 <meta charset="utf-8">
-	<div th:fragment="rodape">
-		<footer class="footer modal-footer">
+		<footer th:fragment="rodape" class="footer">
 			<div class="footer">
 				<div class="row">
-					<div class="col-5 p-0 m-0">
+					<div class="col-1"></div>
+					<div class="col-4">
 						<p>Desenvolvido por:</p>
 						<ul>
 							<li>Gustavo Luiz Dutra Santos</li>
@@ -15,20 +15,22 @@
 							<li>Vitor Braga Ferreira</li>
 						</ul>
 					</div>
-					<div class="col-4">
+					<div class="col-2">
 					</div>
-					<div class="col-3 p-0 m-0">
+					<div class="col-4">
 						<p class="pt-5 pl-2">Tecnologia em Sistemas para Internet - IFTM Campus
 							Uberlandia Centro</p>
 					</div>
+					<div class="col-1"></div>
 				</div>
 				<div class="row container-fluid">
-					<div class="col-12">
+					<div class="col-5"></div>
+					<div class="col-2">
 					<p class="text-center">®Todos os direitos reservados</p>
 					</div>
+					<div class="col-5"></div>
 				</div>
 			</div>
 		</footer>
-	</div>
 </body>
 </html>
