Acerto nos links do navbar

--- a/estetilab/src/main/resources/templates/fragments/navbar.html
+++ b/estetilab/src/main/resources/templates/fragments/navbar.html
@@ -34,19 +34,19 @@
 						class="nav-link btn rosa btn-lg text-white m-0"
 						href="/editarcliente">Clientes</a></li>
 					<li class="nav-item nav-link"><a
-						class="nav-link btn rosa btn-lg text-white m-0" href="/pagina3">Agendamentos</a>
+						class="nav-link btn rosa btn-lg text-white m-0" href="#">Agendamentos</a>
 					</li>
 					<li class="nav-item nav-link"><a
-						class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Prontuário</a>
+						class="nav-link btn rosa btn-lg text-white m-0" href="#">Prontuário</a>
 					</li>
 					<li class="nav-item nav-link"><a
-						class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Atendimento</a>
+						class="nav-link btn rosa btn-lg text-white m-0" href="#">Atendimento</a>
 					</li>
 					<li class="nav-item nav-link"><a
 						class="nav-link btn rosa btn-lg text-white m-0"
 						href="/procedview">Procedimentos</a></li>
 					<li class="nav-item nav-link"><a
-						class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Produtos
+						class="nav-link btn rosa btn-lg text-white m-0" href="#">Produtos
 							Home Care</a></li>
 					<li class="navbar-collapse dropdown nav-link navbar-nav mr-auto">
 						<button
