Criação do CRUD Agendamentos

--- a/estetilab/src/main/resources/templates/fragments/navbar.html
+++ b/estetilab/src/main/resources/templates/fragments/navbar.html
@@ -34,7 +34,7 @@
 						class="nav-link btn rosa btn-lg text-white m-0"
 						href="/editarcliente">Clientes</a></li>
 					<li class="nav-item nav-link"><a
-						class="nav-link btn rosa btn-lg text-white m-0" href="#">Agendamentos</a>
+						class="nav-link btn rosa btn-lg text-white m-0" href="/agenda">Agendamentos</a>
 					</li>
 					<li class="nav-item nav-link"><a
 						class="nav-link btn rosa btn-lg text-white m-0" href="#">Prontuário</a>
