Ajuste links read.html

--- a/estetilab/src/main/resources/templates/CRUD-procedimentos/read.html
+++ b/estetilab/src/main/resources/templates/CRUD-procedimentos/read.html
@@ -18,34 +18,34 @@
         </div>
 
         <div class="container-fluid">
-            <a href="/procedimentos/edit"><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
+            <a href="/procededit"><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
                 <p class="text-white p-2 m-0">Procedimento 01</p>
             </div></a>
-            <a href="/procedimentos/edit"><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
+            <a href="/procededit"><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
                 <p class="text-white p-2 m-0">Procedimento 02</p>
             </div></a>
-            <a href="/procedimentos/edit"><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
+            <a href="/procededit"><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
                 <p class="text-white p-2 m-0">Procedimento 03</p>
             </div></a>
-            <a href="/procedimentos/edit"><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
+            <a href="/procededit"><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
                 <p class="text-white p-2 m-0">Procedimento 04</p>
             </div></a>
-            <a href="/procedimentos/edit"><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
+            <a href="/procededit"><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
                 <p class="text-white p-2 m-0">Procedimento 05</p>
             </div></a>
-            <a href="/procedimentos/edit"><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
+            <a href="/procededit"><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
                 <p class="text-white p-2 m-0">Procedimento 06</p>
             </div></a>
-            <a href="/procedimentos/edit"><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
+            <a href="/procededit"><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
                 <p class="text-white p-2 m-0">Procedimento 07</p>
             </div></a>
-            <a href="/procedimentos/edit"><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
+            <a href="/procededit"><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
                 <p class="text-white p-2 m-0">Procedimento 08</p>
             </div></a>
-            <a href="/procedimentos/edit"><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
+            <a href="/procededit"><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
                 <p class="text-white p-2 m-0">Procedimento 09</p>
             </div></a>
-            <a href="/procedimentos/edit"><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
+            <a href="/procededit"><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
                 <p class="text-white p-2 m-0">Procedimento 10</p>
             </div></a>
         </div>
