--- a/estetilab/src/main/resources/static/css/estilos.css
+++ b/estetilab/src/main/resources/static/css/estilos.css
@@ -205,7 +205,7 @@ form {
 button {
     margin: 15px;
     color: #fff;
-    background-color: #838383;
+    background-color: #FCA9FF;
     border-color: #FCA9FF;
 }
 
