--- a/estetilab/src/main/resources/templates/CRUD-cadastrarClientes/add.html
+++ b/estetilab/src/main/resources/templates/CRUD-cadastrarClientes/add.html
@@ -21,16 +21,16 @@
                     <label for="inputEmail4">Genero</label>
                     <div class="form-row botaoesquerdo">
                         <div class="col-md-2 form-check">
-                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="opcao1" checked>
-                            <label class="form-check-label" for="gridRadios1"> Masculino</label>
+                            <input class="form-check-input ml-1" type="radio" name="gridRadios" id="gridRadios1" value="opcao1" checked>
+                            <label class="form-check-label ml-4" for="gridRadios1"> Masculino</label>
                         </div>
                         <div class="col-md-2 form-check">
                             <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="opcao2">
                             <label class="form-check-label" for="gridRadios2">Feminino</label>
                         </div>
                         <div class="col-md-2 form-check">
-                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="opcao3">
-                            <label class="form-check-label" for="genero">Outro</label>
+                            <input class="form-check-input" for="genero" type="radio" name="gridRadios" id="gridRadios3" value="opcao3">
+                            <label class="form-check-label">Outro</label>
                         </div>
                         <div class="col-md-6 form-group">
                             <input type="text" class="form-row form-control" id="genero" placeholder="Genero">
