margem dos botoes

--- a/estetilab/src/main/resources/templates/CRUD-cadastrarClientes/add.html
+++ b/estetilab/src/main/resources/templates/CRUD-cadastrarClientes/add.html
@@ -108,8 +108,8 @@
                         </div>
 
 
-                        <button type="submit" class="btn btn-rosa espacoBotao">Salvar</button>
-                        <button type="submit" class="btn btn-rosa espacoBotao">Cancelar</button>
+                        <button type="submit" class="btn btn-rosa ml-1">Salvar</button>
+                        <button type="submit" class="btn btn-rosa ml-3">Cancelar</button>
                     </div>
             </form>
             </div>
