--- a/estetilab/src/main/resources/templates/CRUD-cadastrarClientes/add.html
+++ b/estetilab/src/main/resources/templates/CRUD-cadastrarClientes/add.html
@@ -2,9 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org" th:include="fragments/modelo :: modelo">
 
 <body>
-    
+
     <main th:fragment="conteudo">
-    <meta charset="utf-8">
+        <meta charset="utf-8">
         <div id="main" class="container">
             <h1 class="h1cadCliente">Cadastro de Clientes</h1>
             <form class="formulárioAddCliente">
@@ -34,6 +34,10 @@
                         </div>
                         <div class="col-md-6 form-group">
                             <input type="text" class="form-row form-control" id="genero" placeholder="Genero">
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label for="inputEmail4">Data de nascimento</label>
+                            <input type="date" class="form-control" id="inputData" placeholder="Data">
                         </div>
                     </div>
                 </div>
@@ -113,6 +117,7 @@
                     </div>
             </form>
             </div>
+        </div>
     </main>
 </body>
 
