--- a/estetilab/src/main/resources/templates/CRUD-procedimentos/readproced.html
+++ b/estetilab/src/main/resources/templates/CRUD-procedimentos/readproced.html
@@ -9,44 +9,39 @@
                 <div class="col-9">
                     <h3 class="m-3">Lista de Procedimentos</h3>
                 </div>
-                <div class="col-3">
-                    <form action = "/procededit" class="ml-5">
-                        <input type="submit" value="Adicionar Procedimento" class="m-3 p-2">
-                    </form>
-                </div>
             </div>
         </div>
 
-        <div class="container-fluid">
+        <div class="container-fluid mb-4">
             <a href="/procededit"><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
-                <p class="text-white p-2 m-0">Procedimento 01</p>
+                <p class="text-white p-2 m-0">Limpeza de Pele</p>
             </div></a>
             <a href="/procededit"><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
-                <p class="text-white p-2 m-0">Procedimento 02</p>
+                <p class="text-white p-2 m-0">Drenagem Linfática</p>
             </div></a>
             <a href="/procededit"><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
-                <p class="text-white p-2 m-0">Procedimento 03</p>
+                <p class="text-white p-2 m-0">Radiofrequênia</p>
             </div></a>
             <a href="/procededit"><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
-                <p class="text-white p-2 m-0">Procedimento 04</p>
+                <p class="text-white p-2 m-0">Ultrassom</p>
             </div></a>
             <a href="/procededit"><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
-                <p class="text-white p-2 m-0">Procedimento 05</p>
+                <p class="text-white p-2 m-0">Microagulhamento</p>
             </div></a>
             <a href="/procededit"><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
-                <p class="text-white p-2 m-0">Procedimento 06</p>
+                <p class="text-white p-2 m-0">Microblading</p>
             </div></a>
             <a href="/procededit"><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
-                <p class="text-white p-2 m-0">Procedimento 07</p>
+                <p class="text-white p-2 m-0">Vacuoterapia</p>
             </div></a>
             <a href="/procededit"><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
-                <p class="text-white p-2 m-0">Procedimento 08</p>
+                <p class="text-white p-2 m-0">Peeling Físico</p>
             </div></a>
             <a href="/procededit"><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
-                <p class="text-white p-2 m-0">Procedimento 09</p>
+                <p class="text-white p-2 m-0">Peeling Químico</p>
             </div></a>
             <a href="/procededit"><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
-                <p class="text-white p-2 m-0">Procedimento 10</p>
+                <p class="text-white p-2 m-0">Eletrocauterização</p>
             </div></a>
         </div>
         
