Ajustes na codificação UTF-8

--- a/estetilab/src/main/resources/templates/CRUD-agendamentos/lista.html
+++ b/estetilab/src/main/resources/templates/CRUD-agendamentos/lista.html
@@ -4,7 +4,6 @@
 <body>
 
 	<main th:fragment="conteudo">
-		<meta charset="utf-8">
 		<ul class="text-center">
 			<li class="container btn btn-secondary m-2" data-toggle="collapse"
 				href="#agendamento1" role="button" aria-expanded="false"
@@ -13,7 +12,7 @@
 				<div class="card card-body w-50 m-auto">
 					<form class="text-left">
 						<label>Cliente: </label>
-						<input type="text" value="JoÃ£o" disabled>
+						<input type="text" value="João" disabled>
 						<label>Procedimento: </label>
 						<input type="text" value="Limpeza de Pele" disabled>
 						<input type="button" value="Editar" onclick="window.location.href='/agendaedit'">
@@ -28,7 +27,7 @@
 				<div class="card card-body w-50 m-auto">
 					<form class="text-left">
 						<label>Cliente: </label>
-						<input type="text" value="MÃ´nica" disabled>
+						<input type="text" value="Mônica" disabled>
 						<label>Procedimento: </label>
 						<input type="text" value="Microagulhamento" disabled>
 						<input type="button" value="Editar" onclick="window.location.href='/agendaedit'">
@@ -38,14 +37,14 @@
 			
 						<li class="container btn btn-secondary m-2" data-toggle="collapse"
 				href="#agendamento3" role="button" aria-expanded="false"
-				aria-controls="agendamento3"><span>TerÃ§a Feira</span>,<span>08:00</span></li>
+				aria-controls="agendamento3"><span>Terça Feira</span>,<span>08:00</span></li>
 			<div class="collapse" id="agendamento3">
 				<div class="card card-body w-50 m-auto">
 					<form class="text-left">
 						<label>Cliente: </label>
 						<input type="text" value="Maria" disabled>
 						<label>Procedimento: </label>
-						<input type="text" value="Drenagem linfÃ¡rica" disabled>
+						<input type="text" value="Drenagem linfárica" disabled>
 						<input type="button" value="Editar" onclick="window.location.href='/agendaedit'">
 					</form>
 				</div>
