--- a/estetilab/src/main/resources/templates/fragments/footer.html
+++ b/estetilab/src/main/resources/templates/fragments/footer.html
@@ -1,36 +1,34 @@
 <!DOCTYPE html>
 <html xmlns: th="http://www.thymeleaf.org">
 <body>
-<meta charset="utf-8">
-		<footer th:fragment="rodape" class="footer">
-			<div class="footer">
-				<div class="row">
-					<div class="col-1"></div>
-					<div class="col-4">
-						<p>Desenvolvido por:</p>
-						<ul>
-							<li>Gustavo Luiz Dutra Santos</li>
-							<li>Hugo Moreira Coelho Pacheco</li>
-							<li>Tulio Cesar Gontijo</li>
-							<li>Vitor Braga Ferreira</li>
-						</ul>
-					</div>
-					<div class="col-2">
-					</div>
-					<div class="col-4">
-						<p class="pt-5 pl-2">Tecnologia em Sistemas para Internet - IFTM Campus
-							Uberlandia Centro</p>
-					</div>
-					<div class="col-1"></div>
+	<footer th:fragment="rodape" class="footer">
+		<div class="footer">
+			<div class="row">
+				<div class="col-1"></div>
+				<div class="col-4">
+					<p>Desenvolvido por:</p>
+					<ul>
+						<li>Gustavo Luiz Dutra Santos</li>
+						<li>Hugo Moreira Coelho Pacheco</li>
+						<li>Tulio Cesar Gontijo</li>
+						<li>Vitor Braga Ferreira</li>
+					</ul>
 				</div>
-				<div class="row container-fluid">
-					<div class="col-5"></div>
-					<div class="col-2">
-					<p class="text-center">®Todos os direitos reservados</p>
-					</div>
-					<div class="col-5"></div>
+				<div class="col-2"></div>
+				<div class="col-4">
+					<p class="pt-5 pl-2">Tecnologia em Sistemas para Internet -
+						IFTM Campus Uberlandia Centro</p>
 				</div>
+				<div class="col-1"></div>
 			</div>
-		</footer>
+			<div class="row container-fluid">
+				<div class="col-5"></div>
+				<div class="col-2">
+					<p class="text-center">®Todos os direitos reservados</p>
+				</div>
+				<div class="col-5"></div>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
