--- a/estetilab/src/main/resources/templates/CRUD-cadastrarClientes/edit.html
+++ b/estetilab/src/main/resources/templates/CRUD-cadastrarClientes/edit.html
@@ -4,14 +4,13 @@
 <body>
 
     <main th:fragment="conteudo">
-        <meta charset="utf-8">
         <div id="main" class="container">
             <h1 class="h1cadCliente">Lista de Clientes</h1>
             <table class="table table-dark table-striped">
                 <thead>
                     <tr>
                         <th>Nome</th>
-                        <th>Genero</th>
+                        <th>Gênero</th>
                         <th>Data de nascimento</th>
                         <th>Email</th>
                         <th>CPF</th>
