--- a/estetilab/src/main/resources/templates/index.html
+++ b/estetilab/src/main/resources/templates/index.html
@@ -1,28 +1,39 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" th:include="fragments/modelo :: modelo">
+<html xmlns:th="http://www.thymeleaf.org"
+	th:include="fragments/modelo :: modelo">
 <body>
 
-	    <main th:fragment="conteudo">
-      <meta charset="utf-8">
-         <h2 class="h2central">Produtos Home-care</h2>
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="d-block w-25 logo imgCentral" src="imagens/homecare1.jpg" alt="Produtos para o rosto">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-25 logo imgCentral" src="imagens/homecare2.jpg" alt="Produtos para o corpo">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-25 logo imgCentral" src="imagens/homecare3.jpg" alt="Produtos para o cabelo">
-                </div>
-            </div>
-        </div>
-        <p class="pMain">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, itaque nostrum ad quasi placeat similique laborum aliquam nulla ratione maiores iure, consequatur at fugiat vero blanditiis sequi consequuntur odit omnis. Fugit, placeat cum repellendus
-            maiores perferendis voluptatibus quod commodi beatae? Impedit, doloremque. Error alias, temporibus porro sit illum doloribus quis illo molestias, tempore voluptatem accusantium consectetur veniam? Esse, atque facilis. Delectus a laboriosam
-            repellat porro deserunt, suscipit illo, ipsum nisi voluptatibus minus ea rerum odio inventore natus dolor. Aliquam sint aut temporibus sit doloribus eius eos, molestiae perspiciatis explicabo consequatur!
-        </p>
-    </main>
+	<main th:fragment="conteudo">
+		<h2 class="h2central">Produtos Home-care</h2>
+		<div id="carouselExampleSlidesOnly" class="carousel slide"
+			data-ride="carousel">
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img class="d-block w-25 logo imgCentral"
+						src="imagens/homecare1.jpg" alt="Produtos para o rosto">
+				</div>
+				<div class="carousel-item">
+					<img class="d-block w-25 logo imgCentral"
+						src="imagens/homecare2.jpg" alt="Produtos para o corpo">
+				</div>
+				<div class="carousel-item">
+					<img class="d-block w-25 logo imgCentral"
+						src="imagens/homecare3.jpg" alt="Produtos para o cabelo">
+				</div>
+			</div>
+		</div>
+		<p class="pMain">Lorem ipsum dolor sit amet consectetur
+			adipisicing elit. Soluta, itaque nostrum ad quasi placeat similique
+			laborum aliquam nulla ratione maiores iure, consequatur at fugiat
+			vero blanditiis sequi consequuntur odit omnis. Fugit, placeat cum
+			repellendus maiores perferendis voluptatibus quod commodi beatae?
+			Impedit, doloremque. Error alias, temporibus porro sit illum
+			doloribus quis illo molestias, tempore voluptatem accusantium
+			consectetur veniam? Esse, atque facilis. Delectus a laboriosam
+			repellat porro deserunt, suscipit illo, ipsum nisi voluptatibus minus
+			ea rerum odio inventore natus dolor. Aliquam sint aut temporibus sit
+			doloribus eius eos, molestiae perspiciatis explicabo consequatur!</p>
+	</main>
 
 </body>
 </html>
